# Pedestrian_Detection

./: CMakeLists.txt  Parameter.h  People.cpp  People.h  README.md  main  main.cpp  main.py
Movement detection/: Parameter.h  People.h  main.cpp
main.dSYM/Contents/Resources/DWARF/: main
